# MI

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: addition_small.yaml  bigvul_small.yaml  greater_than_small.yaml  ioi_small.yaml  sva_small.yaml
data/bigvul/processed/: cwe_119_pairs.jsonl  cwe_20_pairs.jsonl  manifest.json
src/mechinterp/: __init__.py  cli.py
src/mechinterp/analysis/: __init__.py  ablation.py  activations.py  error_buckets.py  matched_pairs.py  probes.py
src/mechinterp/core/: __init__.py  cache.py  config.py  hooks.py  metrics.py  model.py  pairs.py  runner.py
src/mechinterp/evaluation/: __init__.py  metrics.py
src/mechinterp/experiments/: run_ablation.py  run_behavior.py  run_cache.py  run_error_analysis.py  run_patching.py  run_plots.py  run_probes.py  summarize_ioi.py
src/mechinterp/plots/: __init__.py  generate.py
src/mechinterp/tasks/: __init__.py  base.py
src/mechinterp/tasks/addition/: __init__.py  data.py
src/mechinterp/tasks/bigvul/: __init__.py  data.py
src/mechinterp/tasks/greater_than/: __init__.py  analysis.py  data.py
src/mechinterp/tasks/ioi/: __init__.py  analysis.py  data.py  prompts.py  score.py
src/mechinterp/tasks/sva/: __init__.py  analysis.py  data.py
tests/: test_addition_data.py  test_addition_integration.py  test_bigvul_task.py  test_cli_device.py  test_config_device_override.py  test_evaluation_metrics.py  test_greater_than_data.py  test_ioi_data.py  test_ioi_scoring.py  test_model_wrapper.py  test_new_task_integration.py  test_patching.py  test_sva_data.py
